--- a/CoreDemoY/Views/Shared/UserLayout.cshtml
+++ b/CoreDemoY/Views/Shared/UserLayout.cshtml
@@ -25,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="~/web/css/contact.css" rel='stylesheet' type='text/css' />
     <link href="~/web/css/fontawesome-all.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
-    <link rel="shortcut icon" href="https://www.pikpng.com/pngl/b/74-748374_laptop-user-personal-computer-computer-icons-computer-user.png">
+    <link rel="shortcut icon" href="~/writer/core.png">
 </head>
 <body>
     <!--Header-->
@@ -34,7 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="row">
                 <div class="col-md-4 logo text-left">
                     <a class="navbar-brand" href="/Writer/Index">
-                        <i class="fab fa-linode"></i> Weblog
+                        <i class="fab fa-linode"></i> Asp.net Core Blog
                     </a>
                 </div>
                 @await Html.PartialAsync("Partial2")
