--- a/CoreDemoY/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemoY/Views/Shared/WriterLayout.cshtml
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="~/writer/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/writer/assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/writer/assets/css/style.css">
-    <link rel="shortcut icon" href="https://www.pikpng.com/pngl/b/74-748374_laptop-user-personal-computer-computer-icons-computer-user.png">
+    <link rel="shortcut icon" href="~/writer/core.png">
 </head>
 <body>
     <div class="container-scroller">
         <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo" href="~/writer/index.html"><img src="~/writer/assets/images/logo.svg" alt="logo" /></a>
-                <a class="navbar-brand brand-logo-mini" href="~/writer/index.html"><img src="~/writer/assets/images/logo-mini.svg" alt="logo" /></a>
+                <a class="navbar-brand brand-logo" href="~/writer/index.html"><img style="width: 30%;height: 30%;" src="~/writer/core.png" alt="logo" /></a>
+                <a class="navbar-brand brand-logo-mini" href="~/writer/index.html"><img style="width: 100%;height: 100%;" src="~/writer/core.png" alt="logo" /></a>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-stretch">
                 <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -39,20 +39,20 @@
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
                             <div class="nav-profile-img">
-                                <img src="~/writer/assets/images/faces/face1.jpg" alt="image">
+                                <img src="~/writer/zahir.jpeg" alt="image">
                                 <span class="availability-status online"></span>
                             </div>
                             <div class="nav-profile-text">
-                                <p class="mb-1 text-black">David Greymaax</p>
+                                <p class="mb-1 text-black">Zahir Zairli</p>
                             </div>
                         </a>
                         <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
                             <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log
+                                <i class="mdi mdi-cached mr-2 text-success"></i> Login məlumatları
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">
-                                <i class="mdi mdi-logout mr-2 text-primary"></i> Signout
+                                <i class="mdi mdi-logout mr-2 text-primary"></i> Çıxış
                             </a>
                         </div>
                     </li>
