--- a/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
@@ -3,12 +3,12 @@
         <li class="nav-item nav-profile">
             <a href="#" class="nav-link">
                 <div class="nav-profile-image">
-                    <img src="~/writer/assets/images/faces/face1.jpg" alt="profile">
+                    <img src="~/writer/zahir.jpeg" alt="profile">
                     <span class="login-status online"></span>
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">Yazar Ad,Soy Ad</span>
+                    <span class="font-weight-bold mb-2">Zairli Zahir</span>
                     <span class="text-secondary text-small">Kompüter mühəndisi</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
