Asp.net Core 61.Ders Güncel

--- a/CoreDemoY/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreDemoY/Views/Blog/BlogListByWriter.cshtml
@@ -16,29 +16,29 @@
                 <th>Tarix</th>
                 <th>Kateqorya</th>
                 <th>Durum</th>
-                <th colspan="2">Ayarlar</th>
+                <th colspan="3">Ayarlar</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
-                <tr style="text-align: center;">
-                    <th>@(Model.IndexOf(item)+1)</th>
-                    <td>@item.BlogTitle</td>
-                    <td>@(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))</td>
-                    <td>@item.Category.CategoryName</td>
-                    @if (item.BlogStatus == true)
-                    {
-                        <td><span class="badge badge-success">Aktiv</span></td>
-                        <td><a href="#" class="btn btn-danger">Sil</a></td>
-                    }
-                    else
-                    {
-                        <td><span class="badge badge-secondary">Passiv</span></td>
-                        <td><a href="#" class="btn btn-success">Geri Qaytar</a></td>
-                    }
-                    <td><a href="#" class="btn btn-info">Düzəliş et</a></td>
-                </tr>
+            <tr style="text-align: center;">
+                <th>@(Model.IndexOf(item)+1)</th>
+                <td>@item.BlogTitle</td>
+                <td>@(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))</td>
+                <td>@item.Category.CategoryName</td>
+                @if (item.BlogStatus == true)
+                {
+                    <td><span class="badge badge-success">Aktiv</span></td>
+                }
+                else
+                {
+                    <td><span class="badge badge-secondary">Passiv</span></td>
+                }
+                 <td><a href="~/Blog/DeleteBlog/@item.BlogId" class="btn btn-danger" onclick="return confirm('Silmək istədiyinizdən əminsinizmi?')">Sil</a></td>
+                @*<td><a href="#" class="btn btn-info">Tam sil</a></td>*@
+                <td><a href="~/Blog/EditBlog/@item.BlogId" class="btn btn-info">Düzəliş et</a></td>
+            </tr>
             }
         </tbody>
     </table>
