--- a/CoreDemoY/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemoY/Views/Shared/WriterLayout.cshtml
@@ -106,5 +106,8 @@
     <script src="~/writer/assets/js/off-canvas.js"></script>
     <script src="~/writer/assets/js/hoverable-collapse.js"></script>
     <script src="~/writer/assets/js/misc.js"></script>
+    <script src="~/writer/assets/js/dashboard.js"></script>
+    <script src="~/writer/assets/js/todolist.js"></script>
+    <script src="~/writer/assets/vendors/chart.js/Chart.min.js"></script>
 </body>
 </html>
