--- a/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
@@ -15,7 +15,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/index.html">
+            <a class="nav-link" href="~/Dashboard/Index">
                 <span class="menu-title">Dashboard</span>
                 <i class="mdi mdi-home menu-icon"></i>
             </a>
@@ -27,13 +27,13 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/forms/basic_elements.html">
+            <a class="nav-link" href="~/Blog/BlogListByWriter">
                 <span class="menu-title">Bloglarim</span>
                 <i class="mdi mdi-blogger  menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/charts/chartjs.html">
+            <a class="nav-link" href="~/Blog/BlogAdd">
                 <span class="menu-title">Yeni blog</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
             </a>
