--- a/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemoY/Views/Writer/WriterNavbarPartial.cshtml
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/icons/mdi.html">
+            <a class="nav-link" href="#">
                 <span class="menu-title">Profilim</span>
                 <i class="mdi mdi-contacts menu-icon"></i>
             </a>
@@ -39,25 +39,25 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/tables/basic-table.html">
+            <a class="nav-link" href="#">
                 <span class="menu-title">Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/tables/basic-table.html">
+            <a class="nav-link" href="~/Blog/index">
                 <span class="menu-title">Sayta get</span>
                 <i class="mdi mdi-car menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/tables/basic-table.html">
+            <a class="nav-link" href="~/writer/WriterEditProfile">
                 <span class="menu-title">Ayarlar</span>
                 <i class="mdi mdi-settings menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/writer/pages/tables/basic-table.html">
+            <a class="nav-link" href="#">
                 <span class="menu-title">Çıxış</span>
                 <i class="mdi mdi-logout menu-icon"></i>
             </a>
