--- a/CoreDemoY/Views/Dashboard/Index.cshtml
+++ b/CoreDemoY/Views/Dashboard/Index.cshtml
@@ -18,13 +18,6 @@
             <i class="mdi mdi-home"></i>
         </span> Dashboard
     </h3>
-    <nav aria-label="breadcrumb">
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">
-                <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
-            </li>
-        </ul>
-    </nav>
 </div>
 <div class="row">
     <div class="col-md-4 stretch-card grid-margin">
@@ -34,7 +27,7 @@
                 <h4 class="font-weight-normal mb-3">
                     Toplam blog sayı<i class="mdi mdi-chart-line mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5">0</h2>
+                <h2 class="mb-5">@ViewBag.toplamblog</h2>
                 <h6 class="card-text">Core 5.0 Proje</h6>
             </div>
         </div>
@@ -46,7 +39,7 @@
                 <h4 class="font-weight-normal mb-3">
                     Sizin blogların sayı <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5">0</h2>
+                <h2 class="mb-5">@ViewBag.sizinblog</h2>
                 <h6 class="card-text">Core 5.0 Proje</h6>
             </div>
         </div>
@@ -56,9 +49,9 @@
             <div class="card-body">
                 <img src="~/writer/assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                 <h4 class="font-weight-normal mb-3">
-                    Son 7 gündəki blog sayı<i class="mdi mdi-diamond mdi-24px float-right"></i>
+                    Toplam kateqorya sayı<i class="mdi mdi-diamond mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5">0</h2>
+                <h2 class="mb-5">@ViewBag.category</h2>
                 <h6 class="card-text">Core 5.0 Proje</h6>
             </div>
         </div>
