--- a/CoreDemoY/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemoY/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -1,15 +1,41 @@
-﻿<div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
+﻿@using EntityLayer.Concrete
+@model List<Message>
+<div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
     <h6 class="p-3 mb-0">Messages</h6>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item preview-item">
-        <div class="preview-thumbnail">
-            <img src="~/writer/assets/images/faces/face4.jpg" alt="image" class="profile-pic">
-        </div>
-        <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-            <h6 class="preview-subject ellipsis mb-1 font-weight-normal">Emil sənə bir mesaj göndərdi </h6>
-            <p class="text-gray mb-0"> 1 dəqiqə əvvəl </p>
-        </div>
-    </a>
+
+    @foreach (var item in Model)
+    {
+        <a class="dropdown-item preview-item">
+            <div class="preview-thumbnail">
+                <img src="~/writer/assets/images/faces/face4.jpg" alt="image" class="profile-pic">
+            </div>
+            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
+                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.MessageSender sənə bir mesaj göndərdi </h6>
+                @{
+                    DateTime end = (DateTime)item.MessageDate;
+                    DateTime now = DateTime.Now;
+                    TimeSpan diff = end.Subtract(now);
+                }
+                @if (diff.Days != 0 && diff.Hours != 0 && diff.Minutes != 0)
+                {
+                    <p class="text-gray mb-0">@diff.ToString(@"dd")  gün əvvəl</p>
+                }
+                else if (diff.Days == 0 && diff.Hours != 0 && diff.Minutes != 0)
+                {
+                    <p class="text-gray mb-0">@diff.ToString(@"hh") saat əvvəl</p>
+                }
+                else if (diff.Days == 0 && diff.Hours == 0 && diff.Minutes != 0)
+                {
+                    <p class="text-gray mb-0">@diff.ToString(@"mm") dəqiqə əvvəl</p>
+                }
+                else
+                {
+                    <p class="text-gray mb-0">@diff.ToString(@"ss") saniyə əvvəl</p>
+                }
+            </div>
+        </a>
+    }
     <div class="dropdown-divider"></div>
     <h6 class="p-3 mb-0 text-center">4 yeni mesaj</h6>
 </div>
