--- a/CoreDemoY/Views/Shared/Components/WriterNotification/Default.cshtml
+++ b/CoreDemoY/Views/Shared/Components/WriterNotification/Default.cshtml
@@ -1,17 +1,23 @@
-﻿<div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
+﻿@using EntityLayer.Concrete
+@model List<Notification>
+<div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
     <h6 class="p-3 mb-0">Bildirişlər</h6>
     <div class="dropdown-divider"></div>
+    @foreach (var item in Model)
+    {
     <a class="dropdown-item preview-item">
         <div class="preview-thumbnail">
-            <div class="preview-icon bg-success">
-                <i class="mdi mdi-calendar"></i>
+            <div class="mdi mdi-blogger"></div>
+            <div class="@item.NotificationColor">
+                <i class="@item.NotificationTypeSymbol"></i>
             </div>
         </div>
         <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-            <h6 class="preview-subject font-weight-normal mb-1">Event today</h6>
-            <p class="text-gray ellipsis mb-0"> Just a reminder that you have an event today </p>
+            <h6 class="preview-subject font-weight-normal mb-1">@item.NotificationType</h6>
+            <p class="text-gray ellipsis mb-0"> @item.NotificationDetails </p>
         </div>
     </a>
+    }
     <h6 class="p-3 mb-0 text-center">Bütün bildirişlərə bax</h6>
 </div>
 
